# advent_of_code

./: main.py  pyproject.toml  tox.ini
.github/workflows/: code_quality.yml
assignments/: day1.py  day2.py  day3.py
day1/: day_1.py
day2/: day_2.py  test.txt
day3/: day3.py
tests/: test_day1.py  test_day2.py  test_day3.py
