[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["Simon Tallmyr <simon@tallmyr.se>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
